Terminando el header

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,6 +1,10 @@
-.headerPrincipal-titulo .container{
+.headerPrincipal .container{
     display: flex;
     align-items: center;
     justify-content: space-between;
     
+}
+
+.headerPrincipal-nav{
+    display: flex;
 }
