--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -39,7 +39,15 @@
     flex-wrap: wrap;
 }
 
+.contenidoPrincipal-cursos{
+    display: flex;
+    flex-wrap: wrap;
+}
 
+.contenidoPrincipal-cursos-link{
+    display: flex;
+    width:23%;
+}
 
 
 
