--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -51,6 +51,7 @@
 
 
 /* Responsive*/
+@media (max-width:768px){
 .headerPrincipal .container{
     flex-direction: column;
     align-items: initial;
@@ -60,3 +61,34 @@
     flex-direction: column;
 }
 
+.contenidoPrincipal-cursos{
+    flex-direction: column;
+}
+
+.contenidoPrincipal-cursos-link{
+    width: 100%;
+}
+
+.rodapePrincipal-navMap-list{
+    height: auto;
+    flex-wrap: nowrap;
+}
+
+.rodapePrincipal-patrocinadores .container{
+    flex-direction: column;
+}
+
+.rodapePrincipal-contatoForm{
+    width: 100%;
+}
+
+.rodapePrincipal-patrocinadores-list{
+    align-items: center;
+    width: 100%;
+    margin: 0;
+}
+
+.rodapePrincipal-contatoForm-fieldset{
+   justify-content: center; 
+}
+}
