Arreglando la parte del video y las ventajas

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -49,6 +49,22 @@
     width:23%;
 }
 
+.videoSobre .container{
+    display: flex;
+}
+
+.videoSobre-sobre{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.videoSobre-video{
+    flex-grow: 2;
+}
+.videoSobre-sobre-list{
+    flex-grow: 2;
+}
 
 /* Responsive*/
 @media (max-width:768px){
@@ -90,5 +106,9 @@
 
 .rodapePrincipal-contatoForm-fieldset{
    justify-content: center; 
+}
+
+.headerPrincipal-nav-link-app{
+    order: -1;
 }
 }
