Arreglando la parte responsive

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -61,6 +61,7 @@
 
 .videoSobre-video{
     flex-grow: 2;
+    flex-shrink: 2;
 }
 .videoSobre-sobre-list{
     flex-grow: 2;
@@ -111,4 +112,8 @@
 .headerPrincipal-nav-link-app{
     order: -1;
 }
+.videoSobre .container{
+    flex-direction: column;
+}
+
 }
